Feature implemented:  - mini version of JUnit framework